Set vomnibarCompact height to fix text cropping

--- a/content_scripts/vimium.css
+++ b/content_scripts/vimium.css
@@ -357,6 +357,7 @@ body.vimiumFindMode ::selection {
   display: -webkit-flex;
   -webkit-flex-direction: row;
   font-family: 'Segoe UI', Tahoma, sans-serif;
+  height: 16px;
   font-size: 90%;
 }
 
